Ensure wrapped contact text fields left align in sidebar

--- a/app/assets/stylesheets/spotlight/_pages.scss
+++ b/app/assets/stylesheets/spotlight/_pages.scss
@@ -104,8 +104,15 @@
 
 .contact-photo {
     border: 1px solid #CCC;
+    border-radius: $border-radius-base;
     float: left;
     margin-right: 15px;
+    margin-top: 3px;
+}
+
+// Indent contact fields so they align evenly, only when there is a contact photo
+.sidenav.contacts .contact-photo + div[itemprop] ~ div[itemprop] {
+  margin-left: 87px;
 }
 
 .item-grid-block {
